Accessibility improvements to interactivity pages: - Made keyboard controls more consistent - Removed unnecessary tabindexes - added instructions for screenreaders where needed - Embed content: fixed bug where when using embed code it was moved off screen when optional text was added - Chart: Added 'Summary' to xwd to provide alt for canvas - Chart & table: improved appearance when text is responsive - Interactive List: fixed bug where links showing as 'visited' when weren't - Stimulating Q & Button Sequence: aria-live used to read new info when revealed - Model Answer & MA Results: Fixed bug where line breaks were being lost in info from previous pages

--- a/themes/Nottingham/orangepurple/responsivetext.css
+++ b/themes/Nottingham/orangepurple/responsivetext.css
@@ -161,6 +161,12 @@ figcaption {
     font-size:2.5vmin;
     margin-top:2%;
 }
+#chartHolder {
+	font-size: 2.5vmin;
+}
+table {
+	font-size: 3vmin;
+}
 /*--end of text size changes-----------------------------------------*/
 }
 /*--end of TABLETS and above-----------------------------------------*/
